Updated workspace json

--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -1,7 +1,7 @@
 /**
  * this is the main configuration file of your bit workspace.
  * for full documentation, please see: https://harmony-docs.bit.dev/workspace/configurations
- **/{
+ **/ {
   "$schema": "https://static.bit.dev/teambit/schemas/schema.json",
   /**
    * main configuration of the Bit workspace.
@@ -38,7 +38,9 @@
      */
     "packageManager": "teambit.dependencies/pnpm",
     "policy": {
-      "dependencies": {},
+      "dependencies": {
+        "@teambit/angular-v13": "0.0.17"
+      },
       "peerDependencies": {}
     },
     "nodeLinker": "hoisted"
@@ -51,14 +53,17 @@
    * see https://harmony-docs.bit.dev/aspects/variants for more info.
    **/
   "teambit.workspace/variants": {
+    "scope/angmatenv": {
+      "teambit.harmony/aspect": {}
+    },
     "*": {
-      "teambit.angular/angular-v13@0.0.17": {}
+      "scope/angmatenv": {}
     }
   },
   "teambit.angular/angular-v13@0.0.17": {},
   "teambit.generator/generator": {
     "aspects": [
-      "teambit.angular/angular-v13@0.0.17"
+      "scope/angmatenv"
     ]
   }
 }
